[package]
name = "edfTempoRasbery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
cron = "0.12.1"
env_logger = "0.11.2"
log = "0.4.21"
serde_json= "1.0.114"
serde= "1.0.197"
serde_derive= "1.0.197"
rppal = "0.17.1"
dotenv = "0.15.0"
